--- a/index.html
+++ b/index.html
@@ -1,92 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" rel="stylesheet">
-  <title>Frontend Mentor | Testimonials Grid Section </title>
-</head>
-<body class="body">
-  <div class="block">
-    <div>
-      <img src="./images/image-daniel.jpg" alt="" class="block_image">
-      <p class="block_name">Daniel Clifford</p>
-      <p class="block_state">Verified Graduate</p>
-    </div>
-    <h3 class="block_title">
-      I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-      in the company I joined. I honestly feel I got every penny’s worth.
-    </h3>
-    <p class="block_history">
-      “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-      transition and have heard some people who had an amazing experience here. I signed up 
-      for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-      The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-      the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-    </p>
-  </div>
-  <div class="block" >
-    <div>
-      <img src="./images/image-jonathan.jpg" alt="" class="block_image" style="border: none;">
-      <p class="block_name">Jonathan Walters</p>
-      <p class="block_state">Verified Graduate</p>
-    </div>
-    <h3 class="block_title">The team was very supportive and kept me motivated</h3>
-    <p class="block_history"  >
-      “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-      for a big company. This was one of the best investments I’ve made in myself. ”
-    </p>
-  </div>
-  <div class="block">
-    <div>
-      <img src="./images/image-jeanette.jpg" alt="" class="block_image block_imageBlue">
-      <p class="block_name block_color">Jeanette Harmon</p>
-      <p class="block_state block_color">Verified Graduate</p>
-    </div>
-
-    <h3 class="block_title block_color">overall wonderful and rewarding experience</h3> 
-    <p class="block_history block_color">
-      “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-      while doing something I love. ”
-    </p>
-  </div>
-  <div class="block">
-    <div>
-      <img src="./images/image-patrick.jpg" alt="" class="block_image" style="border: solid 2px hsl(263, 55%, 52%);">
-      <p class="block_name">Patrick Abrams</p>
-      <p class="block_state">Verified Graduate</p>
-    </div>
-    <h3 class="block_title">
-      Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-      learning from their experiences was easy.
-    </h3>
-    <p class="block_history">
-      “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-      gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-      junior developer. The standard is above the rest. You will get the personal attention you need from 
-      an incredible community of smart and amazing people. ”
-    </p>
-  </div>
-  <div class="block ">
-    <div>
-      <img src="./images/image-kira.jpg" alt="" class="block_image">
-      <p class="block_name block_color">Kira Whittle</p>
-      <p class="block_state block_color">Verified Graduate</p>
-    </div>
-    <h3 class="block_title block_color">Such a life-changing experience. Highly recommended!</h3>
-    <p class="block_history block_color">
-      “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-      professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-      student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-      did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-      project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-      could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-      experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-      100% recommend! ”
-    </p>
-  </div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/testimonials-grid-section/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/testimonials-grid-section/logo192.png"/><link rel="manifest" href="/testimonials-grid-section/manifest.json"/><title>React App</title><link href="/testimonials-grid-section/static/css/main.a2442a35.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,u,l=t[0],a=t[1],c=t[2],p=0,s=[];p<l.length;p++)u=l[p],Object.prototype.hasOwnProperty.call(o,u)&&o[u]&&s.push(o[u][0]),o[u]=0;for(n in a)Object.prototype.hasOwnProperty.call(a,n)&&(e[n]=a[n]);for(f&&f(t);s.length;)s.shift()();return i.push.apply(i,c||[]),r()}function r(){for(var e,t=0;t<i.length;t++){for(var r=i[t],n=!0,l=1;l<r.length;l++){var a=r[l];0!==o[a]&&(n=!1)}n&&(i.splice(t--,1),e=u(u.s=r[0]))}return e}var n={},o={1:0},i=[];function u(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,u),r.l=!0,r.exports}u.m=e,u.c=n,u.d=function(e,t,r){u.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},u.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},u.t=function(e,t){if(1&t&&(e=u(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(u.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)u.d(r,n,function(t){return e[t]}.bind(null,n));return r},u.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return u.d(t,"a",t),t},u.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},u.p="/testimonials-grid-section/";var l=this["webpackJsonptestimonials-grid-section-main"]=this["webpackJsonptestimonials-grid-section-main"]||[],a=l.push.bind(l);l.push=t,l=l.slice();for(var c=0;c<l.length;c++)t(l[c]);var f=a;r()}([])</script><script src="/testimonials-grid-section/static/js/2.9853c1bb.chunk.js"></script><script src="/testimonials-grid-section/static/js/main.8de18108.chunk.js"></script></body></html>
